fix the KateSaveModifiedDialog workflow

REVIEW: 114725
BUG: 326224